# open-triplestore

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  .gitleaks.toml  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FUNDING.md  LICENSE  Makefile  NOTICE  PRIVACY.md  README.md  SECURITY.md  SUPPORT.md  TERMS.md  cleanup-containers.sh  deny.toml  docker-compose.gpu.yml  docker-compose.override.yml  docker-compose.yml  vitest.config.js
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-tag.yml  ci.yml  e2e.yml  perf-baseline.yml  perf.yml  release.yml
benches/: parallel_live.rs  perf_baseline.json  performance.rs
docs/: administration.md  api-reference.md  api-services.md  auth.md  data-modeling.md  datasets.md  datatypes.md  dcat.md  development.md  embedding.md  faq.md  formats.md  full-text-search.md  gdpr.md  geo-3d-platform.md  geosparql.md  import.md  ldp.md  linked-data-modelling-styleguide.md  modelling.md  models.md  named-graphs.md  oidc-provider.md  operations.md  organisations.md  overview.md  owl2-dl.md  owl2-el.md  owl2-ql.md  owl2-rl.md  performance.md  plugins.md  rdfs-entailment.md  reasoning.md  release-process.md  rml.md  search-syntax.md  security.md  shacl.md  spark.md  (+6 more)
docs/benchmarks/: README.md  chart_data.json  compare-client.sh  compare-fuseki.sh  gen-data.sh  gen_charts.mjs
docs/conformance/: geosparql.md  shacl.md
docs/notes/: recon.md
examples/: organisation-users.ttl  profile.rs  scale.rs  standards-demo-api-services.json  standards-demo.ttl
frontend/: .gitignore  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  playwright.config.ts  vite.config.js
frontend/e2e/: dataset-validate.spec.ts  demo.spec.ts  global-setup.ts  import-shapes.spec.ts  import.spec.ts  query-browse.spec.ts  shacl-studio.spec.ts  standards-extended.spec.ts  standards.spec.ts
frontend/src/: App.svelte  EmbedApp.svelte  app.css  global.d.ts  main.ts  theme.css
opengraph/: Cargo.toml  README.md
opengraph/benches/: hash_join.rs  parallel.rs
opengraph/src/: canonical.rs  hash_join.rs  lib.rs  mvcc.rs  optimizer.rs  parallel.rs  rocksdb_config.rs  skolem.rs
opengraph/tests/: oxigraph_bnode_behavior.rs
plugins/accounts-dashboard/: Cargo.toml
plugins/accounts-dashboard/src/: lib.rs  ui.html
plugins/api/: Cargo.toml
plugins/api/src/: lib.rs
plugins/hello/: Cargo.toml
plugins/hello/src/: lib.rs
scripts/: benchmark.sh  build_3dbag_excerpt.py  build_lov_catalog.py  build_prefix_dataset.py  compare_engines.sh  gen_dataset_brand.py  gen_org_brand.py  install-git-hooks.sh  perf_regression.py  perf_selftest.sh  run_tests.sh  run_w3c_conformance.sh
scripts/hooks/: pre-push
scripts/testdata/: baseline_fixture.json  baseline_fixture_regress.json
src/: commit_log.rs  kind_detector.rs  lib.rs  main.rs  netutil.rs  plugins.rs  svc_registry.rs
src/alerting/: mod.rs
src/assets/: metadata.rs  mod.rs
src/auth/: acl.rs  acl_handlers.rs  audit.rs  authz.rs  dataset_audit.rs  dataset_graph.rs  db.rs  handlers.rs  jwt.rs  middleware.rs  mod.rs  models.rs  oauth.rs  oauth_handlers.rs  oidc_provider.rs  oidc_rs.rs  org_graph.rs  passkey.rs  password.rs  saml.rs  secret.rs  totp.rs  user_graph.rs  validate.rs
src/backup/: mod.rs
src/catalog/: builder.rs  mod.rs  public.rs  routes.rs
src/data_models/: deref.rs  diff.rs  handlers.rs  merge.rs  mod.rs  models.rs  registry.rs  routes.rs  seed_vocab.rs  upload.rs  version_iri.rs
src/dataset_versions/: commit.rs  handlers.rs  mod.rs  models.rs  registry.rs  reports.rs  routes.rs  share_links.rs  snapshot.rs
src/dcat/: catalog.rs  mod.rs  vocabulary.rs
src/docs/: dataset-governance.md  mod.rs
src/email/: mod.rs
src/geo/: crs.rs  datatypes.rs  functions.rs  functions3d.rs  geom3d.rs  gml.rs  index3d.rs  mod.rs  spatial_index.rs  viewer_feed.rs  vocabulary.rs
src/ifc/: mod.rs  names.rs  rdf.rs  step.rs
src/imports/: bulk.rs  cityjson.rs  handlers.rs  ifc.rs  mod.rs  routes.rs
src/ldp/: container.rs  handler.rs  mod.rs  routes.rs
src/ogcapi/: mod.rs  wkt.rs
src/prefixes/: dataset.rs  mod.rs  routes.rs
src/reasoning/: common.rs  konclude_bridge.rs  mod.rs  owl2_dl.rs  owl2_el.rs  owl2_ql.rs  owl2_rl.rs  rdfs.rs
src/rml/: executor.rs  mod.rs  model.rs  parser.rs
src/saved_queries/: exec.rs  fingerprint.rs  handlers.rs  llm.rs  metadata.rs  mod.rs  models.rs  notify.rs  openapi.rs  params.rs  routes.rs  seed.rs  seed_data.rs  store.rs  testing.rs
src/seed_bundles/: manifest.rs  mod.rs
src/server/: account_lifecycle_tests.rs  accounts_introspection_tests.rs  content_negotiation.rs  error.rs  guest_registration_tests.rs  linked_data.rs  llm_guard.rs  llm_history.rs  llm_sparql.rs  llm_stream.rs  mod.rs  oidc_provider_tests.rs  openapi.rs  passkey_tests.rs  role_visibility_tests.rs  routes.rs  security_regression_tests.rs  security_tests.rs
tests/: api_comprehensive_test.rs  api_protocol_conformance.rs  auth_security_regression.rs  dcat_conformance.rs  geosparql_conformance.rs  integration_test.rs  ldp_conformance.rs  ldp_http_conformance.rs  ogc_geosparql_shacl_roundtrip.rs  owl2_dl_conformance.rs  owl2_el_conformance.rs  owl2_ql_conformance.rs  owl2_rl_conformance.rs  parallel_query_parity.rs  query_cache.rs  rdf11_conformance.rs  rdfs_conformance.rs  registry_delete_test.rs  registry_seed_test.rs  rml_conformance.rs  security_auth_handlers.rs  security_data_models.rs  security_federated.rs  security_routes.rs  security_saved_queries.rs  security_shacl_studio.rs  shacl_conformance.rs  shacl_pipeline_integration.rs  shacl_rules_conformance.rs  shaclc_conformance.rs  sparql12_conformance.rs  sparql_benchmarks.rs  sparql_functions_conformance.rs  sparqloscope_conformance.rs  standards_conformance.rs  standards_demo_e2e.rs  w3c_shacl_conformance.rs  w3c_sparql11_conformance.rs  waalbrug_conformance.rs  waalbrug_viewer_e2e.rs
(+401 files in other folders)
