[workspace]
# `plugins/*` is a glob: dropping in a new `plugins/<name>/Cargo.toml` (e.g. by
# copying `plugins/hello`) makes it a workspace member automatically — no edit
# needed here. It still needs an optional dependency entry + feature flag
# below, and a registration in `src/plugins.rs`, to actually be built in.
members = [".", "opengraph", "plugins/*"]
resolver = "2"

[package]
name = "open-triplestore"
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
description = "A modern, high-performance RDF triple store with SPARQL 1.1/1.2 and GeoSPARQL support"
authors = ["Philippe Renzen <philipperenzen@gmail.com>"]
license-file = "LICENSE"
# Source-available (AGPL-3.0 + Commons Clause), distributed via this repo — not a
# crates.io package. `publish = false` also lets cargo-deny skip the workspace
# crates' non-SPDX license in the licenses check (see deny.toml [licenses].private).
publish = false
readme = "README.md"
repository = "https://github.com/philipperenzen/open-triplestore"
homepage = "https://github.com/philipperenzen/open-triplestore"
keywords = ["rdf", "sparql", "triplestore", "geosparql", "linked-data"]
categories = ["database-implementations", "web-programming::http-server"]

[features]
## RDF 1.2 / SPARQL 1.2 triple term support. oxrdf 0.3 renamed its `rdf-star`
## feature to `rdf-12`. In the oxigraph 0.5 family the `oxrdf::Term::Triple`
## variant is gated per-crate, so enabling it anywhere forces enabling it
## everywhere (else their `Term` matches go non-exhaustive): `oxigraph/rdf-12`
## cascades to the parser/serializer/eval crates, `spargebra/sparql-12` covers
## the algebra crate, and `opengraph/sparql-12` covers our engine layer.
rdf-12          = ["oxigraph/rdf-12", "spargebra/sparql-12", "opengraph/sparql-12"]
## RDFS forward-chaining entailment
rdfs-entailment = []
## OWL 2 EL profile (existential/intersection reasoning)
owl2-el         = ["rdfs-entailment"]
## OWL 2 QL profile (query rewriting)
owl2-ql         = ["rdfs-entailment"]
## OWL 2 RL profile (~80 forward-chaining rules)
owl2-rl         = ["rdfs-entailment"]
## OWL 2 DL profile (external reasoner bridge)
owl2-dl         = ["owl2-rl"]
## SPARQL + Tantivy full-text search (text:search magic property)
text-search     = ["dep:tantivy"]
## Vocabulary term search engine + recommender (LOV replacement) — Tantivy
## index over the bundled LOV corpus and platform registry vocabularies.
## The vocabulary catalog, prefix service and offline install work without it.
vocab-search    = ["dep:tantivy"]
## Linked Data Platform HTTP layer
ldp             = []
## ShEx (Shape Expressions) validation
shex            = []
## SWRL (Semantic Web Rule Language) rule engine
swrl            = []
## Additive 3D / volumetric geometry: the ots-geof: 3D function surface, WKT-Z
## parsing and the 3D R-tree (spec §3). The exact narrow-phase / hull kernel is
## backed by `parry3d-f64` (pure Rust, no native dep — it wraps its own
## glam-backed math types, reached as `parry3d_f64::math::Vector3` to avoid a
## separate, skew-prone glam/nalgebra dep).
geometry3d      = ["dep:parry3d-f64"]
## Certified constructive solid geometry (boolean union/intersection/difference
## and certified `volumeExact`) via the `sfcgal` crate. Off by default and NOT in
## `full`: it links the native libSFCGAL C library (>= 2.0), which the Docker
## image and the GitHub feature-list builds do not provide. Only the GitLab
## `--all-features` job compiles it (on a trixie-based rust image — see
## .gitlab-ci.yml).
sfcgal3d        = ["geometry3d", "dep:sfcgal"]
## SAML 2.0 SSO support (requires libxml2 + openssl via samael's xmlsec feature)
saml            = ["dep:samael", "samael/xmlsec"]
## Test helpers (AppState::test_default_with_store etc.)
test-utils      = []
## Template/example compile-time plugin (plugins/hello), mounted at /ext/hello.
## Off by default — the pattern every real plugin follows, see docs/plugins.md.
plugin-hello    = ["dep:ots-plugin-hello"]
## Optional `age` X25519 backup encryption
backup-encrypt  = ["dep:age"]
## Optional SMTP alerting (lettre itself is a core dependency — the auth
## mailer uses it unconditionally — this flag only gates the alerting module).
alerting        = []
## Asset metadata extractors — heavier per-kind probers, off by default.
## (Image dimensions + geo bbox/CRS are always on; they reuse existing deps.)
asset-pdf         = ["dep:lopdf"]            # PDF page count
asset-exif        = ["dep:kamadak-exif"]     # image EXIF → GPS point
asset-media       = ["dep:mp4", "dep:symphonia"]  # A/V duration+dims: mp4 (mp4/m4a) + symphonia (rest)
asset-archive     = ["dep:zip"]              # ZIP entry count + uncompressed size (bomb-guarded)
asset-spreadsheet = ["dep:calamine"]         # XLSX/ODS sheet + row counts
asset-thumbnail   = ["dep:image"]            # derived thumbnail generation (routes.rs)
asset-clamav      = []                        # ClamAV INSTREAM virus scan on upload (std net only)
## All extensions enabled
full            = ["rdf-12", "owl2-rl", "owl2-el", "owl2-ql", "owl2-dl", "text-search", "vocab-search", "ldp", "shex", "swrl", "saml", "geometry3d", "asset-pdf", "asset-exif", "asset-media", "asset-archive", "asset-spreadsheet", "asset-thumbnail", "asset-clamav"]

[dependencies]
libc = "0.2"
# Core triple store engine. oxrdf/spargebra are pinned to the exact majors
# oxigraph 0.5 re-exports so the model/algebra types unify to a single version
# (a mismatch splits e.g. oxrdf and breaks rdf-star feature unification).
oxigraph = "0.5"
oxrdf = "0.3"
spargebra = "0.4"

# OpenGraph — our maintained engine layer over Oxigraph. Provides durable
# blank-node identity (canonical labels + opt-in Skolemization) applied on import.
# Bundled in this repo as a workspace member (./opengraph).
opengraph = { path = "opengraph" }

# HTTP server
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header", "compression-gzip", "compression-br", "timeout", "catch-panic"] }
tower_governor = { version = "0.4", features = ["axum"] }

# GeoSPARQL spatial operations
geo = "0.28"
geos = "11.0"
wkt = { version = "0.11", features = ["geo-types"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI & config
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1"
thiserror = "2"
bytes = "1"
percent-encoding = "2"
url = "2"

# HTTP client for prefix.cc lookup (rustls avoids system OpenSSL in Docker runtime)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Authentication & Identity
rusqlite = { version = "0.31", features = ["bundled", "backup"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.24", features = ["bundled"] }

# IP CIDR matching for trusted proxy X-Forwarded-For validation (H-2)
ipnet = "2"

# LRU cache for property path memoisation (W4-22)
lru = "0.12"
jsonwebtoken = "9"
argon2 = "0.5"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
# Kept in lockstep with `hkdf` (below): both ride the RustCrypto `digest` 0.11
# trait family, so `Hkdf::<Sha256>` type-checks. The digest 0.11 `Output` is a
# `hybrid_array::Array`, which (unlike the old `GenericArray`) does not impl
# `LowerHex` — hex-encode digests via the `hex` crate instead of `{:x}`.
sha2 = "0.11"
hex = "0.4"
# TOTP two-factor codes (RFC 6238: HMAC-SHA1). Left on the digest 0.10 family;
# self-consistent with each other and independent of the sha2/hkdf path above.
hmac = "0.12"
sha1 = "0.10"
# WebAuthn / FIDO2 passkey login. In-progress challenge state stays in memory
# (no danger-allow-state-serialisation), only finished credentials are stored.
# conditional-ui enables the discoverable-credential login flow (no username).
webauthn-rs = { version = "0.5", features = ["conditional-ui"] }
rand = "0.8"
base64 = "0.22"
flate2 = "1"
age = { version = "0.10", optional = true }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }

# S3 object storage
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-credential-types = "1"

# Async utilities
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# OpenAPI documentation
# NB: utoipa-swagger-ui stays on 7.x — it pairs with utoipa 5 and targets axum
# 0.7. Bumping it to 8/9 would force an axum 0.8 migration. (Swagger UI itself is
# disabled at runtime; only the JSON spec is served.) swagger-ui 7 carries its
# own utoipa 4 transitively, which coexists fine with our utoipa 5.
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# SHACL Compact Syntax parser
nom = "7"

# Parallel evaluation (SHACL, reasoning)
rayon = "1"

# Spatial R-tree index (GeoSPARQL pre-filtering)
rstar = "0.13"

# Exact 3D solid kernel (geometry3d feature). Pure Rust — no native dependency.
# parry3d-f64 wraps its own glam-backed math types (`parry3d_f64::math::Vector3`);
# we use that rather than adding a separate `glam`/`nalgebra` dependency, to avoid version skew.
parry3d-f64 = { version = "0.29", optional = true }
# Certified constructive solid geometry (sfcgal3d feature only). Wraps the native
# libSFCGAL C library, so it is excluded from `full` and the default CI build.
sfcgal = { version = "0.8", optional = true }

# RML mapping sources
csv = "1"
quick-xml = "0.37"

# Seed bundle manifests (src/seed_bundles/manifest.rs)
toml = "0.8"

# Compile-time plugin architecture (src/plugins.rs). The API crate is always
# present (the registry/mount code needs its types); individual plugin crates
# are optional, enabled by their own `plugin-<name>` feature.
ots-plugin-api = { path = "plugins/api" }
ots-plugin-hello = { path = "plugins/hello", optional = true }

# Asset metadata extraction (classify uploads by kind + per-kind detail).
# imagesize/infer are pure-Rust and tiny; the heavier probers are feature-gated.
imagesize = "0.15"
infer = "0.16"
# >= 0.42 required: RUSTSEC-2026-0187 (stack overflow on deeply nested PDF objects).
lopdf = { version = "0.44", optional = true }
kamadak-exif = { version = "0.5", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }
calamine = { version = "0.26", optional = true }
mp4 = { version = "0.14", optional = true }
symphonia = { version = "0.5", default-features = false, features = ["mp3", "flac", "ogg", "vorbis", "wav", "isomp4"], optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif"], optional = true }

# Full-text search (text-search feature)
tantivy = { version = "0.26", optional = true }

# SAML 2.0 SSO (saml feature)
samael = { version = "0.0.22", optional = true }

# OAuth 2.0 / OIDC
openidconnect = { version = "4", default-features = false, features = ["reqwest", "rustls-tls"] }
oauth2 = "5"

# Credential encryption (AES-256-GCM for stored OAuth client secrets)
aes-gcm = "0.10"
hkdf = "0.13"

# In-memory concurrent cache (OAuth PKCE sessions)
dashmap = "6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio-test = "0.4"
http-body-util = "0.1"
percent-encoding = "2"
# Software FIDO2 authenticator for passkey integration tests (no hardware).
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey"] }
webauthn-rs-proto = "0.5"

[[bench]]
name = "performance"
harness = false

[[bench]]
name = "parallel_live"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast local "release-like" builds for development only. Fat LTO + a single
# codegen unit make `--release` very slow to link; this profile trades a few
# percent of runtime speed for a much faster build. NEVER use for test
# acceptance or production builds — those must use `--release` (fat LTO) above.
# Build with: cargo build --profile release-dev
[profile.release-dev]
inherits = "release"
lto = "thin"
codegen-units = 16
strip = false

# ── Faster everyday debug + test builds ──
# Dependencies are almost never stepped through in a debugger, but their debug
# info dominates link time for a binary with this many crates. Drop debuginfo for
# dependencies only (the `"*"` override does not touch our own workspace crates),
# so backtraces and breakpoints in our code are unchanged while every plain
# `cargo build`, `cargo test`, and `make watch` link step gets noticeably faster.
[profile.dev.package."*"]
debug = false

# The test profile links the same heavy dependency set into every test binary;
# give it the same treatment so `cargo test` / `cargo nextest` link faster too.
[profile.test.package."*"]
debug = false
