[package]
name = "ots-plugin-hello"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Template/example Open Triplestore plugin — copy this crate to start a new one"
license-file = "../../LICENSE"
publish = false

[dependencies]
ots-plugin-api = { path = "../api" }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
